--- a/Views/Games/Create.cshtml
+++ b/Views/Games/Create.cshtml
@@ -12,30 +12,51 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-group">
-        <label asp-for="Title" class="control-label"></label>
-        <input asp-for="Title" class="form-control" />
-        <span asp-validation-for="Title" class="text-danger"></span>
+    <div class="container">
+        <div class="form-group">
+            <label asp-for="Title" class="control-label"></label>
+            <input asp-for="Title" class="form-control" />
+            <span asp-validation-for="Title" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="ReleaseDate" class="control-label"></label>
+            <input asp-for="ReleaseDate" class="form-control" />
+            <span asp-validation-for="ReleaseDate" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Price" class="control-label"></label>
+            <input asp-for="Price" class="form-control" />
+            <span asp-validation-for="Price" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="FranchiseId" class="control-label"></label>
+            @Html.DropDownListFor(model => model.FranchiseId, (SelectList)ViewData["FranchiseId"], "Select Franchise", new { @class = "form-control" })
+            <span asp-validation-for="FranchiseId" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="DeveloperId" class="control-label"></label>
+            @Html.DropDownListFor(model => model.DeveloperId, (SelectList)ViewData["DeveloperId"], "Select Developer", new { @class = "form-control" })
+            <span asp-validation-for="DeveloperId" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="PublisherId" class="control-label"></label>
+            @Html.DropDownListFor(model => model.PublisherId, (SelectList)ViewData["PublisherId"], "Select Publisher", new { @class = "form-control" })
+            <span asp-validation-for="PublisherId" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="PlatformsId" class="control-label"></label>
+            @Html.DropDownListFor(model => model.PlatformsId, (SelectList)ViewData["PlatformsId"], "Select Platform", new { @class = "form-control" })
+            <span asp-validation-for="PlatformsId" class="text-danger"></span>
+        </div>
+
+        <br /> 
+        <button type="submit" class="btn btn-primary">Create</button>
     </div>
-
-    <div class="form-group">
-        <label asp-for="FranchiseId" class="control-label"></label>
-        @Html.DropDownListFor(model => model.FranchiseId, (SelectList)ViewData["FranchiseId"], "Select Franchise", new { @class = "form-control" })
-        <span asp-validation-for="FranchiseId" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="DeveloperId" class="control-label"></label>
-        @Html.DropDownListFor(model => model.DeveloperId, (SelectList)ViewData["DeveloperId"], "Select Developer", new { @class = "form-control" })
-        <span asp-validation-for="DeveloperId" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="PublisherId" class="control-label"></label>
-        @Html.DropDownListFor(model => model.PublisherId, (SelectList)ViewData["PublisherId"], "Select Publisher", new { @class = "form-control" })
-        <span asp-validation-for="PublisherId" class="text-danger"></span>
-    </div>
-
-
-    <button type="submit" class="btn btn-primary">Create</button>
+    
 }
