--- a/Views/Games/Delete.cshtml
+++ b/Views/Games/Delete.cshtml
@@ -17,6 +17,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ReleaseDate)
+        </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Franchise.Id)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
