--- a/Views/Games/Details.cshtml
+++ b/Views/Games/Details.cshtml
@@ -17,13 +17,19 @@
             @Html.DisplayFor(model => model.Title)
         </dd>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FranchiseId)
+            @Html.DisplayFor(model => model.ReleaseDate)
         </dd>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DeveloperId)
+            @Html.DisplayFor(model => model.Franchise.Id)
         </dd>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PublisherId)
+            @Html.DisplayFor(model => model.Developer.Id)
+        </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Publisher.Id)
+        </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Platforms.Id)
         </dd>
 
     </dl>
