--- a/Views/Games/Edit.cshtml
+++ b/Views/Games/Edit.cshtml
@@ -13,33 +13,52 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DeveloperId" class="control-label"></label>
-                <input asp-for="DeveloperId" class="form-control" />
-                <span asp-validation-for="DeveloperId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FranchiseId" class="control-label"></label>
-                <input asp-for="FranchiseId" class="form-control" />
-                <span asp-validation-for="FranchiseId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PublisherId" class="control-label"></label>
-                <input asp-for="PublisherId" class="form-control" />
-                <span asp-validation-for="PublisherId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+
+            <div class="container">
+                <div class="form-group">
+                    <label asp-for="Title" class="control-label"></label>
+                    <input asp-for="Title" class="form-control" />
+                    <span asp-validation-for="Title" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="ReleaseDate" class="control-label"></label>
+                    <input asp-for="ReleaseDate" class="form-control" />
+                    <span asp-validation-for="ReleaseDate" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Price" class="control-label"></label>
+                    <input asp-for="Price" class="form-control" />
+                    <span asp-validation-for="Price" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="FranchiseId" class="control-label"></label>
+                    @Html.DropDownListFor(model => model.FranchiseId, (SelectList)ViewData["FranchiseId"], "Select Franchise", new { @class = "form-control" })
+                    <span asp-validation-for="FranchiseId" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="DeveloperId" class="control-label"></label>
+                    @Html.DropDownListFor(model => model.DeveloperId, (SelectList)ViewData["DeveloperId"], "Select Developer", new { @class = "form-control" })
+                    <span asp-validation-for="DeveloperId" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="PublisherId" class="control-label"></label>
+                    @Html.DropDownListFor(model => model.PublisherId, (SelectList)ViewData["PublisherId"], "Select Publisher", new { @class = "form-control" })
+                    <span asp-validation-for="PublisherId" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="PlatformsId" class="control-label"></label>
+                    @Html.DropDownListFor(model => model.PlatformsId, (SelectList)ViewData["PlatformsId"], "Select Platform", new { @class = "form-control" })
+                    <span asp-validation-for="PlatformsId" class="text-danger"></span>
+                </div>
+
+                <br />
+                <button type="submit" class="btn btn-primary">Edit</button>
             </div>
         </form>
     </div>
@@ -50,5 +69,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
