--- a/Views/NF/Create.cshtml
+++ b/Views/NF/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model UltraStore.Models.Publisher
+﻿@model UltraStore.Models.Seller
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>Publisher</h4>
+<h4>Seller</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,9 +18,9 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Country" class="control-label"></label>
-                <input asp-for="Country" class="form-control" />
-                <span asp-validation-for="Country" class="text-danger"></span>
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
