--- a/Views/NF/Delete.cshtml
+++ b/Views/NF/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model UltraStore.Models.Franchise
+﻿@model UltraStore.Models.Seller
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,14 +8,20 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Franchise</h4>
+    <h4>Seller</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Email)
         </dd>
     </dl>
     
