--- a/Views/NF/Details.cshtml
+++ b/Views/NF/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model UltraStore.Models.Publisher
+﻿@model UltraStore.Models.Seller
 
 @{
     ViewData["Title"] = "Details";
@@ -7,18 +7,21 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Publisher</h4>
+    <h4>Seller</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Country)
-        </dd> 
+            @Html.DisplayFor(model => model.Email)
+        </dd>
     </dl>
 </div>
 <div>
