--- a/Views/NF/Index.cshtml
+++ b/Views/NF/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<UltraStore.Models.Franchise>
+﻿@model IEnumerable<UltraStore.Models.Seller>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,11 +13,12 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -25,6 +26,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
