--- a/Views/Publisher/Delete.cshtml
+++ b/Views/Publisher/Delete.cshtml
@@ -11,18 +11,15 @@
     <h4>Publisher</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+        <dt class = "col-sm-10">
+            @Html.DisplayFor(model => model.Id)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-@*         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd> *@
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Country)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
