--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
                     </ul>
                 </div>
             </div>
+            @Html.Partial("_LoginPartial")
         </nav>
     </header>
     <div class="container">
