--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,12 +5,13 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p> O Resultado é: 
-        @ViewData["Resultado"]
-    </p>
+    <h1 class="display-4">Olá! Seja bem vindo.</h1>
     <p> 
-        E-mail: @ViewData["email"]
+        Somos a UltraStore
     </p>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>
+        A UltraStore é o destino perfeito para os amantes de games! Se você é fã de jogos de última geração, colecionador de itens exclusivos ou apenas busca uma experiência divertida e imersiva, aqui é o seu lugar. Nossa loja oferece uma vasta seleção de jogos para todas as plataformas – de consoles a PCs, além de acessórios, merchandise, e itens exclusivos que você não encontra em nenhum outro lugar.
+
+        Com uma equipe apaixonada por games e sempre atualizada com as novidades do mercado, garantimos um atendimento de excelência e um ambiente que reflete a cultura gamer. Na UltraStore, você não apenas compra, você vive o jogo!
+    </p>
 </div>
