--- a/Views/Developers/Index.cshtml
+++ b/Views/Developers/Index.cshtml
@@ -38,6 +38,7 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DeveloperType)
+                @Enum.GetName(typeof(UltraStore.Enums.DeveloperType), item.DeveloperType)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Location)
