--- a/Views/Reviews/Index.cshtml
+++ b/Views/Reviews/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<UltraStore.Models.Review>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Reviews Index";
 }
 
-<h1>Index</h1>
+<h1>Reviews Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Adicionar Item</a>
 </p>
 <table class="table">
     <thead>
