--- a/Views/Store/Index.cshtml
+++ b/Views/Store/Index.cshtml
@@ -24,12 +24,15 @@
             <div class="swiper-slide">
                 <!-- Slide Content -->
                 <div class="game-card">
-                    <img src="@Url.Content($"~/{game.ImagePath}")" alt="@game.Title" class="game-image" />
-                    <h3 class="game-title">@game.Title</h3>
+                    <a href="@Url.Action("GameInfo", "Store", new { id = game.Id })">
+                        <img src="@Url.Content($"~/{game.ImagePath}")" alt="@game.Title" class="game-image" />
+                        <h3 class="game-title">@game.Title</h3>
+                    </a>
                 </div>
             </div>
         }
     </div>
+
 
     <!-- Navigation buttons -->
     <div class="swiper-button-next"></div>
@@ -81,14 +84,25 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        position: relative;
+    }
+
+    .game-image-container {
+        width: 100%;
+        max-width: 300px;
+        height: 200px; /* Ou qualquer altura desejada */
+        background-color: #333; /* Cor sólida de fundo */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        border-radius: 8px;
     }
 
     .game-image {
-        width: 100%;
-        max-width: 300px;
-        border-radius: 8px;
-        margin-bottom: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        max-width: 100%;
+        height: 100%;
+        object-fit: cover; /* Garante que a imagem preencha o contêiner sem distorcer */
     }
 
     .game-title {
